--- a/egui-client/index.html
+++ b/egui-client/index.html
@@ -50,7 +50,7 @@
             }
         }
 
-        /* Allow canvas to fill entire web page: */
+        /* Allow canvas to fill entire web module: */
         html,
         body {
             overflow: hidden;
