--- a/egui-client/index.html
+++ b/egui-client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 <!-- Disable zooming: -->
@@ -25,8 +25,8 @@
     <link data-trunk rel="copy-file" href="assets/maskable_icon_x512.png"/>
 
 
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon_ios_touch_192.png">
+    <link rel="manifest" href="assets/manifest.json">
+    <link rel="apple-touch-icon" href="assets/icon_ios_touch_192.png">
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#404040">
 
@@ -66,7 +66,7 @@
             margin-left: auto;
             display: block;
             position: absolute;
-            top: 0%;
+            top: 0;
             left: 50%;
             transform: translate(-50%, 0%);
         }
@@ -98,7 +98,7 @@
             display: block;
             width: 24px;
             height: 24px;
-            margin: 0px;
+            margin: 0;
             border-radius: 50%;
             border: 3px solid #fff;
             border-color: #fff transparent #fff transparent;
